flux/apps/mail/amavis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amavis
  namespace: mail
spec:
  selector:
    matchLabels:
      app: mailserver
      tier: amavis
  template:
    metadata:
      labels:
        app: mailserver
        tier: amavis
        logType: amavis
    spec:
      containers:
      - name: amavis
        image: technicalguru/mailserver-amavis:2.11.1.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 10024
          name: amavis
        volumeMounts:
        - name: virusmails
          mountPath: /var/virusmails
      volumes:
        - name: virusmails
          persistentVolumeClaim:
            claimName: amavis-virusmails
