flux/apps/mail/opendkim.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opendkim
  namespace: mail
spec:
  selector:
    matchLabels:
      app: mailserver
      tier: opendkim
  template:
    metadata:
      labels:
        app: mailserver
        tier: opendkim
        logType: opendkim
    spec:
      containers:
      - name: opendkim
        image: technicalguru/mailserver-opendkim:2.11.0.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 41001
          name: opendkim
