flux/apps/mail/postfix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfix
  namespace: mail
spec:
  selector:
    matchLabels:
      app: mailserver
      tier: postfix
  template:
    metadata:
      labels:
        app: mailserver
        tier: postfix
        logType: postfix
    spec:
      containers:
      - name: postfix
        image: technicalguru/mailserver-postfix:3.5.6.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 25
          name: smtp
        - containerPort: 110
          name: pop3
        - containerPort: 143
          name: imap
        - containerPort: 587
          name: submission
        - containerPort: 993
          name: imaps
        - containerPort: 995
          name: pop3s
        - containerPort: 10025
          name: checked
        resources: {}
        volumeMounts:
        - name: mailboxes
          mountPath: /var/vmail
        - name: spool
          mountPath: /var/spool/postfix
        - name: certificate
          mountPath: /var/certificate
        - name: "dovecot-nfs"
          mountPath: "/etc/dovecot/conf.d/00-nfs.conf"
          subPath: "00-nfs.conf"
      volumes:
      - name: mailboxes
        persistentVolumeClaim:
          claimName: postfix-mailboxes
      - name: spool
        persistentVolumeClaim:
          claimName: postfix-spool
      - name: certificate
        secret:
          secretName: mail-reisman-org-tls
      - name: dovecot-nfs
        configMap:
          name: dovecot-nfs-config
