flux/apps/mail/postfixadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfixadmin
  namespace: mail
spec:
  selector:
    matchLabels:
      app: mailserver
      tier: postfixadmin
  template:
    metadata:
      labels:
        app: mailserver
        tier: postfixadmin
        logType: apache
    spec:
      containers:
      - name: postfixadmin
        image: technicalguru/mailserver-postfixadmin:3.3.13.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
