flux/apps/mail/roundcube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcube
  namespace: mail
spec:
  selector:
    matchLabels:
      app: mailserver
      tier: roundcube
  template:
    metadata:
      labels:
        app: mailserver
        tier: roundcube
        logType: apache
    spec:
      containers:
      - name: roundcube
        image: technicalguru/mailserver-roundcube:1.6.4.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
