flux/apps/mail/mariadb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: mail
spec:
  selector:
    app: mailserver
    tier: database
  ports:
  - port: 3306
    targetPort: mysql
