flux/apps/mail/opendkim_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opendkim
  namespace: mail
spec:
  selector:
    app: mailserver
    tier: opendkim
  ports:
  - port: 41001
    name: opendkim
    targetPort: opendkim
