flux/apps/mail/postfixadmin_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postfixadmin
  namespace: mail
spec:
  selector:
    app: mailserver
    tier: postfixadmin
  ports:
  - port: 80
    targetPort: http
