flux/apps/mail/roundcube_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roundcube
  namespace: mail
spec:
  selector:
    app: mailserver
    tier: roundcube
  ports:
  - port: 80
    targetPort: http
