flux/apps/mail/postfixadmin_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postfixadmin
  namespace: mail
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - "postfixadmin.reisman.org"
      secretName: postfixadmin-tls
  rules:
    - host: "postfixadmin.reisman.org"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: "postfixadmin"
                port:
                  number: 80
